--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.blikoon.qrcodescannerlibrary"
     android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
 
@@ -10,24 +11,26 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        tools:replace="icon, label, roundIcon"
+        android:icon="@mipmap/chs_store"
+        android:label="CHS Store"
+        android:roundIcon="@mipmap/chs_store"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SellActivity" />
+        <activity android:name=".ReturnActivity" />
+        <activity android:name=".RestockActivity" />
+        <activity android:name=".AddProductActivity" />
+        <activity android:name=".ModifySalePriceActivity" />
+        <activity android:name=".ViewInventoryActivity" />
+        <activity android:name=".OpeningActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SellActivity" />
-        <activity android:name=".ReturnActivity" />
-        <activity android:name=".RestockActivity" />
-        <activity android:name=".AddProductActivity" />
-        <activity android:name=".ModifySalePriceActivity" />
-        <activity android:name=".ViewInventoryActivity"></activity>
     </application>
 
 </manifest>
